; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-fsl-lpspi.c_fsl_lpspi_calculate_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-fsl-lpspi.c_fsl_lpspi_calculate_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsl_lpspi_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@MSEC_PER_SEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fsl_lpspi_data*, i32)* @fsl_lpspi_calculate_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsl_lpspi_calculate_timeout(%struct.fsl_lpspi_data* %0, i32 %1) #0 {
  %3 = alloca %struct.fsl_lpspi_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.fsl_lpspi_data* %0, %struct.fsl_lpspi_data** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = mul nsw i32 12, %6
  %8 = load %struct.fsl_lpspi_data*, %struct.fsl_lpspi_data** %3, align 8
  %9 = getelementptr inbounds %struct.fsl_lpspi_data, %struct.fsl_lpspi_data* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sdiv i32 %7, %11
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = mul i64 2, %16
  %18 = load i32, i32* @MSEC_PER_SEC, align 4
  %19 = sext i32 %18 to i64
  %20 = mul i64 %17, %19
  %21 = trunc i64 %20 to i32
  %22 = call i32 @msecs_to_jiffies(i32 %21)
  ret i32 %22
}

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
